refactor : teamServiceTest 수정